chore: linting fixes

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,6 +1,4 @@
-<nav
-  class="fixed top-0 inset-x-0 z-50 sm:ml-64 bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700"
->
+<nav class="fixed top-0 inset-x-0 z-50 sm:ml-64 bg-white dark:bg-gray-950">
   <div class="px-5 py-3 lg:px-5 lg:pl-5">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
