--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
+  class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full bg-gray-50 sm:translate-x-0 dark:bg-gray-800"
   aria-label="Sidebar"
 >
-  <div class="flex flex-col h-full px-3 py-4 pb-4 overflow-y-auto bg-white dark:bg-gray-800">
+  <div class="flex flex-col h-full px-3 py-4 pb-4 overflow-y-auto bg-gray-100 dark:bg-gray-900">
     <a routerLink="/" class="flex ms-2 pb-4">
       <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">
         M<span class="font-light">Data</span>
