feat: add page template and setup ngrx

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -28,7 +28,7 @@
         <span
           class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
         >
-          Markets
+          {{ title }}
         </span>
       </div>
 
