--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
     </ul>
 
     <h3 class="mb-3 uppercase text-gray-900 dark:text-white text-xs">account</h3>
-    <ul class="space-y-2 mb-10">
+    <ul class="space-y-2 mb-20">
       <li>
         <a
           routerLink="/profile"
@@ -55,6 +55,40 @@
         >
           <mat-icon>settings</mat-icon>
           <span class="flex-1 ms-3 whitespace-nowrap">Settings</span>
+        </a>
+      </li>
+    </ul>
+
+    <h3 class="mb-3 uppercase text-gray-900 dark:text-white text-xs">More</h3>
+    <ul class="space-y-2">
+      <li>
+        <a
+          href="https://polygon.io/"
+          target="_blank"
+          class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+        >
+          <mat-icon>link</mat-icon>
+          <span class="flex-1 ms-3 whitespace-nowrap">Polygon API</span>
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.linkedin.com/in/englishshaun/"
+          target="_blank"
+          class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+        >
+          <mat-icon>link</mat-icon>
+          <span class="flex-1 ms-3 whitespace-nowrap">LinkedIn</span>
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://github.com/ENGLISH87"
+          target="_blank"
+          class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+        >
+          <mat-icon>link</mat-icon>
+          <span class="flex-1 ms-3 whitespace-nowrap">Github</span>
         </a>
       </li>
     </ul>
