--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -1,65 +1,91 @@
-<div class="grid md:grid-cols-2 gap-4 mb-4">
-  <div class="flex items-center justify-center h-24 rounded">
-    {{ ticker }}
-  </div>
-  <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-</div>
+<md-standard-template title="Market">
+  @if (data$ | async; as data) {
+    <div class="grid md:grid-cols-2 gap-6 mb-6">
+      <div class="flex items-center justify-center p-8 h-24 rounded">
+        <img
+          width="50"
+          [src]="data.summary?.branding?.icon_url + '?apikey=im24yF6OYmi7d2fDCul_7sqJJLeZddbB'"
+          [alt]="data.summary?.ticker"
+        />
+        <h2>{{ data.summary?.name }} ({{ data.summary?.ticker }})</h2>
+        <p>
+          {{ data.summary?.primary_exchange }}. 15min delayed price. Currency in
+          {{ data.summary?.currency_name }}
+        </p>
+      </div>
+      <div class="flex items-center justify-center p-8 h-24 rounded bg-gray-50 dark:bg-gray-800">
+        <p class="text-2xl text-gray-400 dark:text-gray-500">Prev/Today</p>
+      </div>
+    </div>
 
-<div class="flex items-center justify-center h-48 mb-4 rounded bg-gray-50 dark:bg-gray-800">
-  <p class="text-2xl text-gray-400 dark:text-gray-500">
-    <mat-icon>add</mat-icon>
-  </p>
-</div>
-<div class="grid grid-cols-2 gap-4 mb-4">
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-</div>
-<div class="flex items-center justify-center h-48 mb-4 rounded bg-gray-50 dark:bg-gray-800">
-  <p class="text-2xl text-gray-400 dark:text-gray-500">
-    <mat-icon>add</mat-icon>
-  </p>
-</div>
-<div class="grid grid-cols-2 gap-4">
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-  <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-</div>
+    <div class="grid md:grid-cols-5 xl:grid-cols-6 gap-6 mb-6">
+      <div
+        class="md:col-span-3 xl:col-span-4 p-8 flex items-center justify-center rounded bg-gray-50 h-full dark:bg-gray-800"
+      >
+        <p class="text-2xl text-gray-400 dark:text-gray-500">Charts / Tabs</p>
+      </div>
+      <div
+        class="md:col-span-2 xl:col-span-2 p-8 flex flex-col rounded bg-gray-50 h-full dark:bg-gray-800"
+      >
+        <h2 class="text-xl mb-5 dark:text-white">Summary</h2>
+        <div class="flex flex-col w-full">
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Previous Close</span>
+            <span class="dark:text-white">{{
+              data.snapshot?.session?.previous_close | number: '1.2-2'
+            }}</span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Open</span>
+            <span class="dark:text-white">{{
+              data.snapshot?.session?.open | number: '1.2-2'
+            }}</span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Day's Range</span>
+            <span class="dark:text-white">
+              {{ data.snapshot?.session?.low | number: '1.2-2' }} -
+              {{ data.snapshot?.session?.high | number: '1.2-2' }}
+            </span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">52 Week Range</span>
+            <span class="dark:text-white">unavailable</span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Volume</span>
+            <span class="dark:text-white">
+              {{ data.snapshot?.session?.volume | number }}
+            </span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Avg. Volume</span>
+            <span class="dark:text-white">Value 3</span>
+          </div>
+          <div class="flex justify-between mb-6">
+            <span class="uppercase">Market Cap</span>
+            <span class="dark:text-white">{{ data.summary?.market_cap | number }}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="flex items-center justify-center h-48 mb-6 rounded bg-gray-50 dark:bg-gray-800">
+      <p class="text-2xl text-gray-400 dark:text-gray-500">
+        <mat-icon>add</mat-icon>
+      </p>
+    </div>
+    <div class="grid grid-cols-2 gap-6">
+      <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+        <p class="text-2xl text-gray-400 dark:text-gray-500">
+          <mat-icon>add</mat-icon>
+        </p>
+      </div>
+      <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+        <p class="text-2xl text-gray-400 dark:text-gray-500">
+          <mat-icon>add</mat-icon>
+        </p>
+      </div>
+    </div>
+  }
+</md-standard-template>
