--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,7 @@ body {
 body {
   margin: 0;
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--font-color);
 }
 
 body.dark {
