--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,10 +1,11 @@
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full bg-gray-50 sm:translate-x-0 dark:bg-gray-800"
+  [class.visible]="visible$ | async"
+  class="fixed top-0 left-0 pt-[70px] sm:pt-0 z-40 w-64 h-screen transition-transform -translate-x-full bg-gray-100 sm:translate-x-0 dark:bg-gray-900"
   aria-label="Sidebar"
 >
-  <div class="flex flex-col h-full px-3 py-4 pb-4 overflow-y-auto bg-gray-100 dark:bg-gray-900">
-    <a routerLink="/" class="flex ms-2 pb-4">
+  <div class="flex flex-col h-full px-3 py-4 pb-4 overflow-y-auto">
+    <a routerLink="/" class="hidden sm:flex ms-2 pb-4">
       <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">
         M<span class="font-light">Data</span>
       </span>
@@ -60,7 +61,7 @@
     </ul>
 
     <h3 class="mb-3 uppercase text-gray-900 dark:text-white text-xs">More</h3>
-    <ul class="space-y-2">
+    <ul class="space-y-2 mb-10">
       <li>
         <a
           href="https://polygon.io/"
