feat: connect to ws, price updates

--- a/src/app/routes/dashboard/components/favourites-ticker/favourites-ticker.component.html
+++ b/src/app/routes/dashboard/components/favourites-ticker/favourites-ticker.component.html
@@ -3,7 +3,9 @@
     <a [routerLink]="['markets', fav.snapshot?.ticker]" class="flex flex-row">
       <div class="pr-2">
         <p class="font-semibold dark:text-white mb-2">{{ fav.snapshot?.ticker }}</p>
-        <p>{{ fav.snapshot?.session?.price | number: '1.2-2' }}</p>
+        <p [mdHighlight]="fav.latestPrice?.vw || fav.snapshot?.session?.price">
+          {{ fav.latestPrice?.vw || fav.snapshot?.session?.price | number: '1.2-2' }}
+        </p>
       </div>
       <div>
         <p class="whitespace-nowrap mb-2" [mdPrice]="fav.snapshot?.session?.change">
