--- a/src/styles/partials/_prices.scss
+++ b/src/styles/partials/_prices.scss
@@ -17,3 +17,13 @@
   display: inline-block;
   border-radius: 4px;
 }
+
+.highlight-up {
+  background-color: rgb(2, 172, 44);
+  color: white;
+}
+
+.highlight-down {
+  background-color: rgb(221, 40, 76);
+  color: white;
+}
