--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,18 +1,32 @@
 <aside
   id="logo-sidebar"
   [class.visible]="visible$ | async"
-  class="fixed top-0 left-0 pt-[70px] sm:pt-0 z-40 w-64 h-screen transition-transform -translate-x-full bg-gray-100 sm:translate-x-0 dark:bg-gray-900"
+  class="fixed top-0 left-0 z-50 w-full sm:w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 border-r dark:border-r-0 bg-gray-100 dark:bg-gray-900"
   aria-label="Sidebar"
 >
   <div class="flex flex-col h-full px-3 py-4 pb-4 overflow-y-auto">
-    <a routerLink="/" class="hidden sm:flex ms-2 pb-4">
-      <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">
-        M<span class="font-light">Data</span>
-      </span>
-    </a>
+    <div class="flex justify-between items-center mb-10">
+      <a routerLink="/" class="ms-2">
+        <span
+          class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
+        >
+          M<span class="font-light">Data</span>
+        </span>
+      </a>
+
+      <button
+        (click)="toggle()"
+        aria-controls="logo-sidebar"
+        type="button"
+        class="inline-flex items-center p-2 mr-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      >
+        <span class="sr-only">Close sidebar</span>
+        <mat-icon>menu_open</mat-icon>
+      </button>
+    </div>
 
     <h3 class="mb-3 uppercase text-gray-900 dark:text-white text-xs">menu</h3>
-    <ul class="space-y-2 mb-20">
+    <ul class="space-y-2 mb-14">
       <li>
         <a
           routerLink="/"
@@ -37,7 +51,7 @@
     </ul>
 
     <h3 class="mb-3 uppercase text-gray-900 dark:text-white text-xs">account</h3>
-    <ul class="space-y-2 mb-20">
+    <ul class="space-y-2 mb-14">
       <li>
         <a
           routerLink="/profile"
