--- a/src/app/routes/markets/components/price-summary/price-summary.component.html
+++ b/src/app/routes/markets/components/price-summary/price-summary.component.html
@@ -8,38 +8,61 @@
       @if (today) {
         <div class="flex flex-row w-full divide-x divide-solid divide-gray-500">
           <div class="flex flex-col w-1/3">
-            <h3 class="text-xl">
-              @switch (data.snapshot.market_status) {
-                @case ('open') {
-                  Live
-                }
-                @case ('closed') {
-                  Market Closed
-                }
-                @case ('early_trading') {
-                  Early Trading
-                }
-                @case ('late_trading') {
-                  Late Trading
-                }
+            @switch (data.snapshot.market_status) {
+              @case ('open') {
+                <h3 class="text-xl">Live</h3>
+                <p class="font-semibold text-2xl dark:text-white py-2">
+                  {{ data.snapshot.session?.price | currency }}
+                </p>
+                <p [mdPrice]="data.snapshot.session?.change">
+                  {{ data.snapshot.session?.change | number: '1.2-2' }} ({{
+                    data.snapshot.session?.change_percent | number: '1.2-2'
+                  }}%)
+                </p>
               }
-            </h3>
-            <p class="font-semibold text-2xl dark:text-white py-2">
-              {{ data.snapshot.session?.price | currency }}
-            </p>
-            <p [mdPrice]="data.snapshot.session?.change">
-              {{ data.snapshot.session?.change }}
-              ({{ data.snapshot.session?.change_percent }}%)
-            </p>
+              @case ('closed') {
+                <h3 class="text-xl">Market Closed</h3>
+                <p class="font-semibold text-2xl dark:text-white py-2">
+                  {{ data.snapshot.session?.close | currency }}
+                </p>
+                <p [mdPrice]="data.snapshot.session?.change">
+                  {{ data.snapshot.session?.change | number: '1.2-2' }} ({{
+                    data.snapshot.session?.change_percent | number: '1.2-2'
+                  }}%)
+                </p>
+              }
+              @case ('early_trading') {
+                <h3 class="text-xl">Early Trading</h3>
+                <p class="font-semibold text-2xl dark:text-white py-2">
+                  {{ data.snapshot.session?.price | currency }}
+                </p>
+                <p [mdPrice]="data.snapshot.session?.early_trading_change">
+                  {{ data.snapshot.session?.early_trading_change | number: '1.2-2' }} ({{
+                    data.snapshot.session?.early_trading_change_percent | number: '1.2-2'
+                  }}%)
+                </p>
+              }
+              @case ('late_trading') {
+                <h3 class="text-xl">Late Trading</h3>
+                <p class="font-semibold text-2xl dark:text-white py-2">
+                  {{ data.snapshot.session?.close | currency }}
+                </p>
+                <p [mdPrice]="data.snapshot.session?.late_trading_change">
+                  {{ data.snapshot.session?.late_trading_change | number: '1.2-2' }} ({{
+                    data.snapshot.session?.late_trading_change_percent | number: '1.2-2'
+                  }}%)
+                </p>
+              }
+            }
           </div>
-          <div class="flex flex-col w-1/3 pl-9">
+          <div class="flex flex-col w-1/3 pl-4 sm:pl-5">
             <h3 class="text-xl">Previous Close</h3>
             <p class="font-semibold text-2xl dark:text-white py-2">
               {{ data.snapshot.session?.previous_close | currency }}
             </p>
             <p>June 16, 16:00</p>
           </div>
-          <div class="flex flex-col w-1/3 pl-9">
+          <div class="flex flex-col w-1/3 pl-4 sm:pl-9">
             <h3 class="text-xl">Open</h3>
             <p class="font-semibold text-2xl dark:text-white py-2">
               {{ data.snapshot.session?.open | currency }}
