--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -11,7 +11,7 @@
 
     <div class="grid md:grid-cols-5 xl:grid-cols-6 gap-6 mb-6">
       <div
-        class="md:col-span-3 xl:col-span-4 py-3 px-8 rounded bg-gray-50 h-full overflow-y-auto dark:bg-gray-800"
+        class="md:col-span-3 xl:col-span-4 pt-0 pb-3 rounded bg-gray-50 h-full overflow-y-auto dark:bg-gray-800"
       >
         <mat-tab-group [preserveContent]="true" [mat-stretch-tabs]="false">
           <mat-tab label="Chart">
@@ -76,8 +76,10 @@
             <span class="dark:text-white">{{ data.summary?.sic_code }}</span>
           </div>
           <div class="flex justify-between mb-6">
-            <span class="uppercase">SIC Desc.</span>
-            <span class="dark:text-white">{{ data.summary?.sic_description }}</span>
+            <span class="w-1/2 uppercase">SIC Desc.</span>
+            <span class="w-1/2 text-right dark:text-white">{{
+              data.summary?.sic_description
+            }}</span>
           </div>
           <div class="flex justify-between mb-6">
             <span class="uppercase">Employees</span>
@@ -96,13 +98,9 @@
         <mat-icon>add</mat-icon>
       </p>
     </div>
-    <div class="grid grid-cols-2 gap-6">
-      <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
-        <p class="text-2xl text-gray-400 dark:text-gray-500">
-          <mat-icon>add</mat-icon>
-        </p>
-      </div>
-      <div class="flex items-center justify-center rounded bg-gray-50 h-28 dark:bg-gray-800">
+
+    <div class="grid">
+      <div class="flex items-center justify-center rounded bg-gray-50 h-48 dark:bg-gray-800">
         <p class="text-2xl text-gray-400 dark:text-gray-500">
           <mat-icon>add</mat-icon>
         </p>
