--- a/src/app/routes/dashboard/components/favourites-ticker/favourites-ticker.component.html
+++ b/src/app/routes/dashboard/components/favourites-ticker/favourites-ticker.component.html
@@ -13,7 +13,7 @@
             fav.snapshot?.session?.change_percent | number: '1.2-2'
           }}%)
         </p>
-        <p [mdPrice]="fav.snapshot?.session?.change">\/\/\</p>
+        <div #chart></div>
       </div>
     </a>
   } @empty {
