--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -4,12 +4,10 @@
   </div>
 
   <div class="grid md:grid-cols-6 gap-4 mb-4">
-    <div class="md:col-span-4 rounded bg-gray-50 h-full max-h-[520px] dark:bg-gray-800">
+    <div class="md:col-span-4 rounded bg-gray-50 h-[520px] dark:bg-gray-800">
       <md-gainers-losers></md-gainers-losers>
     </div>
-    <div
-      class="md:col-span-2 p-4 overflow-y-auto rounded bg-gray-50 max-h-[520px] dark:bg-gray-800"
-    >
+    <div class="md:col-span-2 p-4 overflow-y-auto rounded bg-gray-50 h-[520px] dark:bg-gray-800">
       <h3 class="font-semibold text-2xl dark:text-white">Latest News</h3>
       <md-news></md-news>
     </div>
