--- a/src/app/core/templates/standard-template/standard-template.component.html
+++ b/src/app/core/templates/standard-template/standard-template.component.html
@@ -1,4 +1,4 @@
 <md-nav [title]="title"></md-nav>
-<div class="p-6 pt-20 sm:ml-64">
+<div class="p-6 pt-20 sm:w-auto sm:ml-64">
   <ng-content></ng-content>
 </div>
