--- a/src/app/routes/markets/components/price-summary/price-summary.component.html
+++ b/src/app/routes/markets/components/price-summary/price-summary.component.html
@@ -77,12 +77,12 @@
             <p class="font-semibold text-2xl dark:text-white py-2">$210.45</p>
             <p [mdPrice]="-0.46">-0.46 (-1.05%)</p>
           </div>
-          <div class="flex flex-col w-1/3 pl-9">
+          <div class="flex flex-col w-1/3 pl-4 sm:pl-5">
             <h3 class="text-xl">Open</h3>
             <p class="font-semibold text-2xl dark:text-white py-2">$137.54</p>
             <p>June 16, 16:00</p>
           </div>
-          <div class="flex flex-col w-1/3 pl-9">
+          <div class="flex flex-col w-1/3 pl-4 sm:pl-5">
             <h3 class="text-xl">Close</h3>
             <p class="font-semibold text-2xl dark:text-white py-2">$135.87</p>
             <p>June 17, 09:30</p>
