--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -4,15 +4,13 @@
       <div class="p-8 h-full rounded">
         <md-stock-summary></md-stock-summary>
       </div>
-      <div class="p-8 h-full rounded bg-gray-50 dark:bg-gray-800">
+      <div class="grid-box !p-8 h-full">
         <md-price-summary></md-price-summary>
       </div>
     </div>
 
     <div class="grid md:grid-cols-5 xl:grid-cols-6 gap-6 mb-6">
-      <div
-        class="md:col-span-3 xl:col-span-4 pt-0 pb-3 rounded bg-gray-50 h-full overflow-y-auto dark:bg-gray-800"
-      >
+      <div class="grid-box md:col-span-3 xl:col-span-4 !p-0">
         <mat-tab-group [preserveContent]="true" [mat-stretch-tabs]="false">
           <mat-tab label="Chart">
             @if (data.summary?.ticker) {
@@ -29,9 +27,7 @@
           <mat-tab label="Historical"> todo </mat-tab>
         </mat-tab-group>
       </div>
-      <div
-        class="md:col-span-2 xl:col-span-2 py-6 px-8 flex flex-col rounded bg-gray-50 h-full dark:bg-gray-800"
-      >
+      <div class="grid-box md:col-span-2 xl:col-span-2 !py-6 !px-8">
         <h2 class="text-xl mb-5 dark:text-white">Summary</h2>
         <div class="flex flex-col w-full">
           <div class="flex justify-between mb-6">
@@ -85,7 +81,7 @@
             <span class="uppercase">Employees</span>
             <span class="dark:text-white">{{ data.summary?.total_employees | number }}</span>
           </div>
-          <div class="flex justify-between mb-6">
+          <div class="flex justify-between">
             <span class="uppercase">Listed</span>
             <span class="dark:text-white">{{ data.summary?.list_date | date }}</span>
           </div>
@@ -93,7 +89,7 @@
       </div>
     </div>
 
-    <div class="flex items-center justify-center h-48 mb-6 rounded bg-gray-50 dark:bg-gray-800">
+    <!-- <div class="flex items-center justify-center h-48 mb-6 rounded bg-gray-50 dark:bg-gray-800">
       <p class="text-2xl text-gray-400 dark:text-gray-500">
         <mat-icon>add</mat-icon>
       </p>
@@ -105,6 +101,6 @@
           <mat-icon>add</mat-icon>
         </p>
       </div>
-    </div>
+    </div> -->
   }
 </md-standard-template>
