--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,8 +7,10 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons+Outlined';
 @import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,300,0,0';
 
+@import './partials/layout';
 @import './partials/variables';
 @import './partials/material';
+@import './partials/table';
 @import './partials/prices';
 
 html,
