feat: update chart configs

--- a/src/app/core/components/chart/chart.component.html
+++ b/src/app/core/components/chart/chart.component.html
@@ -7,14 +7,15 @@
         [value]="range$.value"
         (change)="range$.next($event.value)"
       >
-        <mat-button-toggle value="minute">1M</mat-button-toggle>
-        <mat-button-toggle value="hour">1H</mat-button-toggle>
+        <mat-button-toggle value="live">LIVE</mat-button-toggle>
         <mat-button-toggle value="day">1D</mat-button-toggle>
         <mat-button-toggle value="week">1W</mat-button-toggle>
         <mat-button-toggle value="month">1M</mat-button-toggle>
+        <mat-button-toggle value="3months">3M</mat-button-toggle>
+        <mat-button-toggle value="year">1Y</mat-button-toggle>
       </mat-button-toggle-group>
+    } @else {
+      <mat-spinner color="accent" diameter="30"></mat-spinner>
     }
-  } @else {
-    <mat-spinner color="accent" diameter="30"></mat-spinner>
   }
 </div>
