--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
       <md-gainers-losers></md-gainers-losers>
     </div>
     <div class="grid-box md:col-span-2 h-[620px]">
-      <h3 class="font-semibold text-2xl dark:text-white">Latest News</h3>
+      <h3 class="font-semibold text-2xl dark:text-white pb-3">Latest News</h3>
       <md-news></md-news>
     </div>
   </div>
